--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -6,5 +6,11 @@
     <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
   </head>
   <body>
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
+    <script>
+      NetlifyCms.init();
+    </script>
   </body>
 </html>
