--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>Content Manager</title>
-  <script src="https://unpkg.com/netlify-cms@2.10.0/dist/netlify-cms.js"></script>
-</head>
-<body>
-  <script>
-    NetlifyCms.init();
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Content Manager</title>
+    <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
+  </head>
+  <body>
+    <!-- Este container será usado pelo CMS -->
+    <script>
+      NetlifyCms.init();
+    </script>
+  </body>
 </html>
