--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <!-- Este container será usado pelo CMS -->
+    <div id="nc-root"></div>
+
     <script>
       NetlifyCms.init();
     </script>
