--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -10,7 +10,7 @@
     <div id="nc-root"></div>
 
     <script>
-      NetlifyCms.init();
+      CMS.init(); // ← CORRETO!
     </script>
   </body>
 </html>
