--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
+    <!-- Carrega o Netlify CMS via CDN -->
     <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
   </head>
   <body>
@@ -10,7 +11,7 @@
     <div id="nc-root"></div>
 
     <script>
-      CMS.init(); // ← CORRETO!
+      NetlifyCms.init();
     </script>
   </body>
 </html>
