--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
-    <!-- Carrega o Netlify CMS via CDN -->
-    <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
+    <script src="https://unpkg.com/netlify-cms@latest/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <!-- Este container será usado pelo CMS -->
     <div id="nc-root"></div>
-
     <script>
-      NetlifyCms.init();
+      CMS.init();
     </script>
   </body>
 </html>
